# scripkill-ai-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  database.py  document.py  init_db.py  logger.py  main.py
app/models/: base.py  game.py  girl.py  script.py  template.py  user.py
app/routes/: auth.py  chat.py  games.py  girls.py  scripts.py
app/schemas/: base_api_response.py  chat_list.py  girl.py  script.py  user.py
app/utils/: girl_utils.py  user.py
scripts/: start.py
